--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "tests:chrome": "playwright test --config=playwright.config.ts --project=chromium" },
+    "tests:chrome": "playwright test --config=playwright.config.ts --project=chromium --headed" },
   "dependencies": {
     "@playwright/test": "^1.57.0",
     "prettier": "^3.7.4"
